--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <!-- PWA Fullscreen Tags -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -47,7 +48,7 @@
         <!-- HOME SCREEN -->
         <div id="home-screen" class="flex-1 flex flex-col p-6 pb-10 gap-6">
             <!-- Header (Restored Grid) -->
-            <div class="grid grid-cols-12 gap-6 items-stretch h-[120px] shrink-0">
+            <div class="grid grid-cols-12 gap-6 items-stretch h-[15vh] min-h-[100px] max-h-[140px] shrink-0">
                 <!-- Header Left: Profile & Points (col-span-8) -->
                 <div class="col-span-8 flex items-stretch gap-6">
                     <!-- 프로필 -->
@@ -97,7 +98,7 @@
                         <h3 class="text-3xl font-black text-blue-900 mb-6 flex items-center gap-2">오늘의 미션 <span
                                 class="text-4xl">🎯</span></h3>
                         <div id="mission-grid"
-                            class="flex-1 grid grid-cols-6 grid-rows-3 gap-6 overflow-y-auto no-scrollbar pr-2 content-stretch">
+                            class="flex-1 grid grid-cols-6 gap-4 overflow-y-auto no-scrollbar pr-2 content-start">
                         </div>
                     </div>
 
@@ -336,9 +337,10 @@
             </button>
         </div>
 
-        <div class="flex-1 grid grid-cols-12 grid-rows-10 gap-5 min-h-0">
+        <div class="flex-1 grid grid-cols-12 gap-5 min-h-0" style="grid-template-rows: repeat(10, minmax(60px, 1fr));">
             <!-- [LEFT COLUMN] (Rows 1-10) -->
-            <div class="col-span-8 row-span-10 grid grid-cols-8 grid-rows-10 gap-5">
+            <div class="col-span-8 row-span-10 grid grid-cols-8 gap-5"
+                style="grid-template-rows: repeat(10, minmax(60px, 1fr));">
                 <!-- 최고의 기록 (R1-3, C1-4) -->
                 <div
                     class="col-start-1 col-span-4 row-start-1 row-span-3 card bento-card bento-amber p-7 flex flex-col justify-between overflow-hidden">
