--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <h3 class="text-3xl font-black text-blue-900 mb-6 flex items-center gap-2">오늘의 미션 <span
                                 class="text-4xl">🎯</span></h3>
                         <div id="mission-grid"
-                            class="flex-1 grid grid-cols-3 sm:grid-cols-4 md:grid-cols-6 lg:grid-cols-6 gap-3 sm:gap-4 md:gap-6 overflow-y-auto no-scrollbar pr-2 content-start">
+                            class="flex-1 grid grid-cols-6 gap-6 overflow-y-auto no-scrollbar pr-2 content-start">
                         </div>
                     </div>
 
@@ -558,6 +558,14 @@
                     class="flex-1 py-5 bg-gradient-to-r from-primary to-secondary text-white rounded-2xl font-black text-2xl shadow-lg active:scale-95 transition-all">확인</button>
             </div>
         </div>
+    </div>
+
+    <!-- ORIENTATION OVERLAY (Landscape Only Guard) -->
+    <div id="landscape-guard"
+        class="hidden fixed inset-0 bg-primary z-[999] flex flex-col items-center justify-center p-12 text-center text-white">
+        <span class="material-symbols-rounded text-[150px] mb-8 animate-wiggle">screen_rotation</span>
+        <h1 class="text-6xl font-black mb-4">태블릿을 가로로 돌려주세요!</h1>
+        <p class="text-3xl font-bold opacity-80">더 넓고 멋진 화면으로 칭찬 항아리를 만날 수 있어요 ✨</p>
     </div>
 
     <script src="app.js" defer></script>
