--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <!-- HOME SCREEN -->
         <div id="home-screen" class="flex-1 flex flex-col p-6 pb-10 gap-6">
             <!-- Header (Restored Grid) -->
-            <div class="grid grid-cols-12 gap-6 items-stretch h-[min(15vh,130px)] min-h-[90px] shrink-0">
+            <div class="header-grid grid grid-cols-12 gap-6 items-stretch h-[min(15vh,130px)] min-h-[90px] shrink-0">
                 <!-- Header Left: Profile & Points (col-span-8) -->
                 <div class="col-span-8 flex items-stretch gap-6">
                     <!-- 프로필 -->
