--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     <!-- DASHBOARD SCREEN -->
     <div id="dashboard-screen"
         class="hidden fixed inset-0 bg-[#f9fafb] z-[150] flex flex-col p-8 gap-8 overflow-hidden">
-        <div class="flex items-center justify-between shrink-0">
+        <div class="dashboard-header shrink-0">
             <div class="flex items-center gap-4">
                 <span class="material-symbols-rounded text-5xl text-indigo-500">space_dashboard</span>
                 <h1 class="text-5xl font-black text-gray-900 tracking-tight">대시보드</h1>
@@ -338,109 +338,101 @@
         </div>
 
         <div class="flex-1 overflow-y-auto no-scrollbar pr-1">
-            <div class="grid grid-cols-12 gap-5 min-h-full" style="grid-template-rows: repeat(10, minmax(40px, 1fr));">
-                <!-- [LEFT COLUMN] (Rows 1-10) -->
-                <div class="col-span-8 row-span-10 grid grid-cols-8 gap-5"
-                    style="grid-template-rows: repeat(10, minmax(40px, 1fr));">
-                    <!-- 최고의 기록 (R1-3, C1-4) -->
-                    <div
-                        class="col-start-1 col-span-4 row-start-1 row-span-3 card bento-card bento-amber p-7 flex flex-col justify-between overflow-hidden">
-                        <div>
-                            <span class="material-symbols-rounded text-4xl text-amber-500 mb-2">military_tech</span>
-                            <h3 class="text-xl font-black text-gray-800">최고의 조력자</h3>
-                            <p class="text-sm font-bold text-gray-400">명예의 전당 점수</p>
-                        </div>
-                        <div class="mt-4">
-                            <span class="text-6xl font-black text-amber-600 block" id="best-day-score">0P</span>
-                            <p class="text-sm font-bold text-amber-800/40" id="best-day-date">-</p>
-                        </div>
-                    </div>
+            <div class="dashboard-grid-container grid grid-cols-12 gap-5 min-h-full">
 
-                    <!-- 누적 포인트 (R1-3, C5-8) -->
-                    <div
-                        class="col-start-5 col-span-4 row-start-1 row-span-3 card bento-card bento-cyan p-7 flex flex-col justify-between overflow-hidden">
-                        <div>
-                            <span class="material-symbols-rounded text-4xl text-cyan-500 mb-2">stars</span>
-                            <h3 class="text-xl font-black text-gray-800">누적 칭찬 포인트</h3>
-                            <p class="text-sm font-bold text-gray-400">지금까지 받은 모든 점수</p>
-                        </div>
-                        <div class="mt-4">
-                            <span class="text-6xl font-black text-cyan-600 block" id="cumulative-score">0P</span>
-                            <p class="text-sm font-bold text-cyan-800/40">꾸준히 성장하고 있어요!</p>
-                        </div>
+                <!-- 1. 최고의 조력자 (Amber) [Row 1-2, Col 1-3] -->
+                <div class="card bento-card bento-amber p-7 overflow-hidden">
+                    <div>
+                        <span class="material-symbols-rounded text-4xl text-amber-500 mb-2">military_tech</span>
+                        <h3 class="text-xl font-black text-gray-800">최고의 조력자</h3>
+                        <p class="text-sm font-bold text-gray-400">명예의 전당 점수</p>
                     </div>
-
-                    <!-- [TALL] 폭풍 칭찬 행동 (R4-10, C1-2) -->
-                    <div
-                        class="col-start-1 col-span-2 row-start-4 row-span-7 card bento-card bento-emerald p-6 flex flex-col min-h-0">
-                        <div class="flex flex-col gap-2 mb-6">
-                            <span class="material-symbols-rounded text-3xl text-emerald-500">thumb_up</span>
-                            <h3 class="text-lg font-black text-gray-800 leading-tight">폭풍 칭찬 행동</h3>
-                        </div>
-                        <div id="top-missions-good" class="flex-1 flex flex-col gap-3 overflow-y-auto no-scrollbar">
-                        </div>
-                    </div>
-
-                    <!-- [TALL] 주의가 필요해요 (R4-10, C3-4) -->
-                    <div
-                        class="col-start-3 col-span-2 row-start-4 row-span-7 card bento-card bento-rose-bad p-6 flex flex-col min-h-0">
-                        <div class="flex flex-col gap-2 mb-6">
-                            <span class="material-symbols-rounded text-3xl text-rose-500">warning</span>
-                            <h3 class="text-lg font-black text-gray-800 leading-tight">주의가 필요해요</h3>
-                        </div>
-                        <div id="top-missions-bad" class="flex-1 flex flex-col gap-3 overflow-y-auto no-scrollbar">
-                        </div>
-                    </div>
-
-                    <!-- [WIDE TALL] 월별 그래프 (R4-10, C5-8) -->
-                    <div
-                        class="col-start-5 col-span-4 row-start-4 row-span-7 card bento-card bento-indigo p-8 flex flex-col">
-                        <div class="flex items-center justify-between mb-8">
-                            <div class="flex items-center gap-4">
-                                <div class="w-12 h-12 rounded-xl bg-indigo-500/10 flex items-center justify-center">
-                                    <span class="material-symbols-rounded text-2xl text-indigo-600">query_stats</span>
-                                </div>
-                                <h3 class="text-xl font-black text-gray-800">월별 성장 추이</h3>
-                            </div>
-                        </div>
-                        <div id="monthly-chart" class="flex-1 flex items-end justify-around gap-2 px-1 min-h-0"></div>
+                    <div class="mt-4">
+                        <span class="text-6xl font-black text-amber-600 block" id="best-day-score">0P</span>
+                        <p class="text-sm font-bold text-amber-800/40" id="best-day-date">-</p>
                     </div>
                 </div>
 
-                <!-- [RIGHT COLUMN: HISTORY] (Rows 1-10) -->
-                <div class="col-span-4 row-span-10 flex flex-col gap-5">
-                    <!-- 선물 구매 내역 -->
-                    <div class="flex-1 card bento-card bento-blue p-7 flex flex-col min-h-0">
-                        <div class="flex items-center justify-between mb-6">
-                            <div class="flex items-center gap-3">
-                                <span class="material-symbols-rounded text-3xl text-blue-500">card_giftcard</span>
-                                <h3 class="text-xl font-black text-gray-800">선물 구매 내역</h3>
-                            </div>
-                            <button onclick="openFullHistory('gift')"
-                                class="px-4 py-2 bg-blue-50 text-blue-600 rounded-xl font-black text-sm hover:bg-blue-100 transition-colors">
-                                전체 보기
-                            </button>
-                        </div>
-                        <div id="gift-history-preview" class="flex-1 overflow-y-auto no-scrollbar space-y-3"></div>
+                <!-- 2. 누적 포인트 (Cyan) [Row 1-2, Col 4-6] -->
+                <div class="card bento-card bento-cyan p-7 overflow-hidden">
+                    <div>
+                        <span class="material-symbols-rounded text-4xl text-cyan-500 mb-2">stars</span>
+                        <h3 class="text-xl font-black text-gray-800">누적 칭찬 포인트</h3>
+                        <p class="text-sm font-bold text-gray-400">지금까지 받은 모든 점수</p>
                     </div>
-
-                    <!-- 목표 달성 기록 -->
-                    <div class="flex-1 card bento-card bento-purple p-7 flex flex-col min-h-0">
-                        <div class="flex items-center justify-between mb-6">
-                            <div class="flex items-center gap-3">
-                                <span class="material-symbols-rounded text-3xl text-purple-500">auto_awesome</span>
-                                <h3 class="text-xl font-black text-gray-800">목표 달성 기록</h3>
-                            </div>
-                            <button onclick="openFullHistory('goal')"
-                                class="px-4 py-2 bg-purple-50 text-purple-600 rounded-xl font-black text-sm hover:bg-purple-100 transition-colors">
-                                전체 보기
-                            </button>
-                        </div>
-                        <div id="goal-history-preview" class="flex-1 overflow-y-auto no-scrollbar space-y-3"></div>
+                    <div class="mt-4">
+                        <span class="text-6xl font-black text-cyan-600 block" id="cumulative-score">0P</span>
+                        <p class="text-sm font-bold text-cyan-800/40">꾸준히 성장하고 있어요!</p>
                     </div>
                 </div>
+
+                <!-- 3. 월별 그래프 (Indigo) [Row 1-6, Col 7-12] -->
+                <div class="card bento-card bento-indigo p-8">
+                    <div class="flex items-center justify-between mb-8">
+                        <div class="flex items-center gap-4">
+                            <div class="w-12 h-12 rounded-xl bg-indigo-500/10 flex items-center justify-center">
+                                <span class="material-symbols-rounded text-2xl text-indigo-600">query_stats</span>
+                            </div>
+                            <h3 class="text-xl font-black text-gray-800">월별 성장 추이</h3>
+                        </div>
+                    </div>
+                    <div id="monthly-chart" class="flex-1 flex items-end justify-around gap-2 px-1 min-h-0"></div>
+                </div>
+
+                <!-- 4. 폭풍 칭찬 행동 (Emerald) [Row 3-10, Col 1-3] -->
+                <div class="card bento-card bento-emerald p-6 flex flex-col min-h-0">
+                    <div class="flex flex-col gap-2 mb-6">
+                        <span class="material-symbols-rounded text-3xl text-emerald-500">thumb_up</span>
+                        <h3 class="text-lg font-black text-gray-800 leading-tight">폭풍 칭찬 행동</h3>
+                    </div>
+                    <div id="top-missions-good" class="flex-1 flex flex-col gap-3 overflow-y-auto no-scrollbar">
+                    </div>
+                </div>
+
+                <!-- 5. 주의가 필요해요 (Rose) [Row 3-10, Col 4-6] -->
+                <div class="card bento-card bento-rose-bad p-6 flex flex-col min-h-0">
+                    <div class="flex flex-col gap-2 mb-6">
+                        <span class="material-symbols-rounded text-3xl text-rose-500">warning</span>
+                        <h3 class="text-lg font-black text-gray-800 leading-tight">주의가 필요해요</h3>
+                    </div>
+                    <div id="top-missions-bad" class="flex-1 flex flex-col gap-3 overflow-y-auto no-scrollbar">
+                    </div>
+                </div>
+
+                <!-- 6. 선물 구매 내역 (Blue) [Row 7-10, Col 7-9] -->
+                <div class="card bento-card bento-blue p-7 flex flex-col min-h-0">
+                    <div class="flex items-center justify-between mb-6">
+                        <div class="flex items-center gap-3">
+                            <span class="material-symbols-rounded text-3xl text-blue-500">card_giftcard</span>
+                            <h3 class="text-xl font-black text-gray-800">선물 구매 내역</h3>
+                        </div>
+                        <button onclick="openFullHistory('gift')"
+                            class="px-4 py-2 bg-blue-50 text-blue-600 rounded-xl font-black text-sm hover:bg-blue-100 transition-colors">
+                            전체 보기
+                        </button>
+                    </div>
+                    <div id="gift-history-preview" class="flex-1 overflow-y-auto no-scrollbar space-y-3"></div>
+                </div>
+
+                <!-- 7. 목표 달성 기록 (Purple) [Row 7-10, Col 10-12] -->
+                <div class="card bento-card bento-purple p-7 flex flex-col min-h-0">
+                    <div class="flex items-center justify-between mb-6">
+                        <div class="flex items-center gap-3">
+                            <span class="material-symbols-rounded text-3xl text-purple-500">auto_awesome</span>
+                            <h3 class="text-xl font-black text-gray-800">목표 달성 기록</h3>
+                        </div>
+                        <button onclick="openFullHistory('goal')"
+                            class="px-4 py-2 bg-purple-50 text-purple-600 rounded-xl font-black text-sm hover:bg-purple-100 transition-colors">
+                            전체 보기
+                        </button>
+                    </div>
+                    <div id="goal-history-preview" class="flex-1 overflow-y-auto no-scrollbar space-y-3"></div>
+                </div>
+
             </div>
         </div>
+    </div>
+    </div>
     </div>
 
     <!-- GIFT SHOP MODAL (ID Restored for JS) -->
