--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         class="flex-[3.6] card glass-card p-8 shrink-0 flex flex-col min-h-0 overflow-hidden bg-gradient-to-br from-rose-100/70 via-white/50 to-pink-100/60 border-2 border-rose-200/80 shadow-rose-glow">
                         <h3 class="text-3xl font-black text-rose-900 mb-[1vh] flex items-center gap-2">목표 미션 <span
                                 class="text-4xl">🎯</span></h3>
-                        <div id="goal-display" class="flex-1 flex flex-col justify-start space-y-4 min-h-0">
+                        <div id="goal-display" class="flex-1 flex flex-col justify-start min-h-0">
                         </div>
                     </div>
                 </div>
